Add possibility to choose Java or Xtend as overridden impl classes